add validation results API
